Tune OCI image creation